<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>ca.phon</groupId>
  <artifactId>phon-shell-plugin</artifactId>
  <name>PhonShell</name>
  <description>Interactive scripting console for Phon.</description>
  
  <licenses>
    <license>
      <name>GNU GPL v3.0+</name>
      <distribution>repo</distribution>
      <url>http://www.gnu.org/copyleft/gpl.html</url>
    </license>
  </licenses>
  
  <distributionManagement>
    <repository>
      <id>phon.ca-release</id>
      <name>Phon Release</name>
      <url>https://www.phon.ca/artifacts/libs-release-local</url>
    </repository>
    <snapshotRepository>
      <id>phon.ca-snapshot</id>
      <name>Phon Snapshot</name>
      <url>https://www.phon.ca/artifacts/libs-snapshot-local</url>
    </snapshotRepository>
  </distributionManagement>
  
  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>libs-release</name>
      <url>https://www.phon.ca/artifacts/libs-release</url>
    </repository>
    <repository>
      <snapshots/>
      <id>snapshots</id>
      <name>libs-snapshot</name>
      <url>https://www.phon.ca/artifacts/libs-snapshot</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>central</id>
      <name>plugins-release</name>
      <url>https://www.phon.ca/artifacts/plugins-release</url>
    </pluginRepository>
    <pluginRepository>
      <snapshots/>
      <id>snapshots</id>
      <name>plugins-snapshot</name>
      <url>https://www.phon.ca/artifacts/plugins-snapshot</url>
    </pluginRepository>
  </pluginRepositories>
  
  <dependencies>
    <dependency>
      <groupId>ca.phon</groupId>
      <artifactId>phon-app</artifactId>
      <version>3.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-core</artifactId>
      <version>0.6</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-blocks</artifactId>
      <version>0.6</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-history</artifactId>
      <version>0.6</version>
    </dependency>
    <dependency>
      <groupId>ca.hedlund</groupId>
      <artifactId>jiss-rsyntaxarea-input</artifactId>
      <version>0.6</version>
    </dependency>
    
    <dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.8.2</version>
		<scope>test</scope>
	</dependency>
  </dependencies>
  
  <build>
    <plugins>
		<!-- Setup target/source settings for Java compilation -->
		<plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-compiler-plugin</artifactId>
		  <version>3.7.0</version>
		  <configuration>
		    <source>9</source>
		    <target>9</target>
		    <compilerArgs>
				<arg>--add-modules</arg>
				<arg>java.xml.bind</arg>
			</compilerArgs>
		  </configuration>
		</plugin>
		
    </plugins>
  </build>
  <version>14</version>
</project>
